# TallNeck

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
.github/workflows/: sync-to-public.yml
components/gui/: CMakeLists.txt
components/gui/custom/: custom.c  custom.h  lv_conf_ext.h
flash_data/: ISS(ZARYA).txt  iss.txt
main/: CMakeLists.txt  idf_component.yml  tcp_server.c
main/include/: get_tle.h  globals.h  littlefs.h  lvgl_display.h  sgp4sdp4.h  stepper_motor_encoder.h  tcp_server.h  uart.h  wifi_sta.h
main/src/: get_tle.c  littlefs.c  lvgl_display.c  main.c  sgp4sdp4.c  sgp_in.c  sgp_obs.c  state_machine.c  stepper_motor_encoder.c  tcp_server.c  uart.c  wifi_sta.c
tcp_client/: sdkconfig  sdkconfig.old
tcp_client/main/: tcp_client_main.c
